--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"axios": "^0.27.2",
 		"core-js": "^3.6.5",
 		"lottie-web-vue": "^1.2.0",
+		"sweetalert2": "^11.4.17",
 		"vue": "^2.6.11",
 		"vue-router": "^3.2.0",
 		"vue2-editor": "^2.10.3",
