--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"sweetalert2": "^11.4.17",
 		"vue": "^2.6.11",
 		"vue-router": "^3.2.0",
+		"vue-sweetalert2": "^5.0.5",
 		"vue2-editor": "^2.10.3",
 		"vuex": "^3.6.2"
 	},
